--- a/frontend/src/components/Player.css
+++ b/frontend/src/components/Player.css
@@ -1,4 +1,63 @@
 .player {
-  background-color: blue;
+  position: relative;
+  background-color: deepskyblue;
   height: 80px;
+
+  & .overlay {
+    display: flex;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 100%;
+    background-color: dodgerblue;
+    transition: height 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+    overflow: hidden;
+  }
+
+  & .overlay.maximized {
+    height: calc(100vh - 160px);
+  }
+
+  & .overlay.minimized {
+    height: 0;
+  }
+
+  & .filters,
+  & .iframe,
+  & .recommendations {
+    flex: 1
+  }
+
+  & .content {
+    padding: 10px;
+    display: flex;
+    gap: 2rem;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  & .content .title {
+    font-weight: 600;
+    line-height: 1.2;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  & .content .artist-album {
+    margin-top: 0.15rem;
+    font-size: 0.92rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    & > * {
+      white-space: nowrap;
+    }
+  }
+
+  & .content button + button {
+    margin-left: .5rem;
+  }
+
 }
