--- a/frontend/src/components/TrackItem.css
+++ b/frontend/src/components/TrackItem.css
@@ -18,22 +18,22 @@
     background: #f3f3f3;
 
     & > img {
-            display: block;
+      display: block;
       width: 100%;
       height: 100%;
       object-fit: cover;
     }
-  }
 
-  & .coverart-fallback {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    font-weight: 700;
-    font-size: 1rem;
-    color: #666;
+    & .image-fallback {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+      font-weight: 700;
+      font-size: 1rem;
+      color: #666;
+    }
   }
 
   & .meta {
