--- a/frontend/src/components/LoadingSpinner.css
+++ b/frontend/src/components/LoadingSpinner.css
@@ -1,20 +1,30 @@
 .loading-spinner {
+  background-color: rgba(0, 0, 0, .3);
   display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
-  width: 100%;
-  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 
   .spinner {
     width: 48px;
     height: 48px;
-    border: 5px solid #333;
-    border-bottom-color: transparent;
     border-radius: 50%;
     display: inline-block;
     box-sizing: border-box;
     animation: rotation 1s linear infinite;
+  }
+
+  &.dark .spinner {
+    border: 5px solid #fff;
+    border-bottom-color: transparent;
+  }
+  &.light .spinner {
+    border: 5px solid #333;
+    border-bottom-color: transparent;
   }
 }
 
